examples/invalid/01_top_level_let_missing_type.lane
// invalid: top-level let must include an explicit type annotation
module Examples.Invalid01

pub let answer = 42
